2005-09-13  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: added x and y positions to output.

2005-09-01  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: changed window_size to be an input parameter.  This changes the "tau" value for derivative determination.

2005-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* laser_forcecal.m: re-added drift subtraction.  updated documentation.

2005-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: added exception handling to MIP loader, incase the Minimum Intensity Projection images do not exist.

2005-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* laser_forcecal.m: added drift subtraction.  added documentation.

2005-07-27  Jeremy Cribb <jcribb@email.unc.edu>
	* laser_forcecal.m: added.  Performs force calibration routine and returns a table describing forces measured with respect to voltage applied to coils.  requires user to identify 'dominant coil' used in experimental process.
	* extract_magnet_log: added textual output describing timing between magnet and tracking log files.

2005-07-19  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: Corrected documentation.
	* extract_magnet_log.m: added.  Extracts magnet data for time periods relevant to recorded timestamps of input (video or laser).
	
2005-06-20  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: used binning in 2D force plot instead of interpolated surface.  It runs slower, but makes more sense.  Changed the origin to coincide with the defined center of the pole tip.  Plots now have axes in microns instead of pixels. Changed the outputs to Force table, error table, and step size.  Updated documentation.

2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: cleaned up code.  fixed bug in offset of 1D force-distance plot.

2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: added documentation.
	
2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* fcd_forcecal2d.m: removed and renamed to forcecal2d.m