@@ -1,3 +1,6 @@
+2005-10-06  Jeremy Cribb <jcribb@email.unc.edu>
+	* forcecal2d.m: added x and y positions to output.  Changed output plots for better representation of data.  changed handling of filenames to be more dependable.
+
 2005-09-13  Jeremy Cribb <jcribb@email.unc.edu>
 	* forcecal2d.m: added x and y positions to output.
 
